# hrevn-mcp-server

./: README.md  pyproject.toml  server.json
docs/: ANTIGRAVITY_MCP_EXPERIMENT.md  ANTIGRAVITY_SETUP.md  CLAUDE_CODE_MCP_CONFIG.md
examples/: antigravity_baseline_payload.json  antigravity_mcp_config.json  baseline_check_payload.json
src/hrevn_mcp_server/: __init__.py  client.py  config.py  server.py  tools.py
tests/: test_tools.py
